Fixed horizontal scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -126,3 +126,12 @@
   background-color: #d2ff9a;
   color: #3d6500;
 }
+
+/* Hide scrollbar for elements with no-scrollbar class */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
